--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="./lib/jquery_lite.js"></script>
+    <script type="text/javascript" src="./lib/DOMTycoon.js"></script>
   </head>
   <body>
     <h1>Header!</h1>
