--- a/index.html
+++ b/index.html
@@ -2,42 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <title>Snizzake</title>
+    <link rel="stylesheet" type="text/css" href="./css/snake.css">
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <script type="text/javascript" src="./lib/DOMTycoon.js"></script>
   </head>
   <body>
-    <h1>Header!</h1>
-    <div class="custom">
-      <h2>List!</h2>
-      <ul>
-        <li class="testItem">List Item1
-          <div class="bunnyItem">B-List Item1</div>
-          <div class="bunnyItem">B-List Item2</div>
-          <div class="bunnyItem">B-List Item3</div>
-          <div class="dummyItem">B-List Item4</div>
-        </li>
+    <h1>Snizzake!</h1>
 
-        <li class="testItem">List Item2
-          <div class="dummyItem">B-List Item5</div>
-          <div class="bunnyItem">B-List Item6</div>
-          <div class="dummyItem">B-List Item7</div>
-          <div class="dummyItem">B-List Item8</div>
-        </li>
-        <li class="testItem">List Item3
-          <div class="dummyItem">B-List Item9</div>
-          <div class="bunnyItem">B-List Item10</div>
-          <div class="dummyItem">B-List Item11</div>
-          <div class="dummyItem">B-List Item12</div>
-        </li>
-        <li class="testItem">List Item4
-          <div class="bunnyItem">B-List Item13</div>
-          <div class="bunnyItem">B-List Item14</div>
-          <div class="dummyItem">B-List Item15</div>
-          <div class="dummyItem">B-List Item16</div>
-        </li>
-      </ul>
+    <figure class="snake-game"></figure>
 
-    </div>
   </body>
 </html>
