start snake project with DOM-Tycoon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Snizzake!</h1>
 
-    <figure class="snake-game"></figure>
+    <figure class="snake"></figure>
 
   </body>
 </html>
