took out snake file and add hehelper method for function $l"

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" type="text/css" href="./css/snake.css">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <script type="text/javascript" src="./lib/DOMTycoon.js"></script>
+
   </head>
   <body>
-    <h1>Snizzake!</h1>
+    <h1>Test</h1>
 
-    <figure class="snake"></figure>
 
   </body>
 </html>
